--- a/LTrinhWebNhom3/LTrinhWebNhom3.csproj
+++ b/LTrinhWebNhom3/LTrinhWebNhom3.csproj
@@ -24,6 +24,11 @@
     <Content Remove="Areas\Admin\Views\PortfolioImage\Display.cshtml" />
     <Content Remove="Areas\Admin\Views\PortfolioImage\Index.cshtml" />
     <Content Remove="Areas\Admin\Views\PortfolioImage\Update.cshtml" />
+    <Content Remove="Areas\Admin\Views\Project\Add.cshtml" />
+    <Content Remove="Areas\Admin\Views\Project\Delete.cshtml" />
+    <Content Remove="Areas\Admin\Views\Project\Display.cshtml" />
+    <Content Remove="Areas\Admin\Views\Project\Index.cshtml" />
+    <Content Remove="Areas\Admin\Views\Project\Update.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +70,11 @@
     <None Include="Areas\Admin\Views\Portfolio\Display.cshtml" />
     <None Include="Areas\Admin\Views\Portfolio\Index.cshtml" />
     <None Include="Areas\Admin\Views\Portfolio\Update.cshtml" />
+    <None Include="Areas\Admin\Views\Project\Add.cshtml" />
+    <None Include="Areas\Admin\Views\Project\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\Project\Display.cshtml" />
+    <None Include="Areas\Admin\Views\Project\Index.cshtml" />
+    <None Include="Areas\Admin\Views\Project\Update.cshtml" />
     <None Include="Areas\Admin\Views\Tag\Add.cshtml" />
     <None Include="Areas\Admin\Views\Tag\Delete.cshtml" />
     <None Include="Areas\Admin\Views\Tag\Display.cshtml" />
